# s3lib

./: .gitignore  CONNECTION_POOL_DESIGN.md  DEBUG_LOGGING.md  FUTURE.md  ISSUES.md  MAINTAINING.md  Makefile  README.md  README.txt  S3_CHECKSUM_IMPLEMENTATION_PLAN.md  SIGV4_CHECKSUM_PLAN.md  SIGV4_IMPLEMENTATION.md  SIGV4_MIGRATION.md  apply_headers.py  copy_object.py  demo_pool_upload.py  example_output.txt  head_object.py  list_bucket.py  put_object.py  pyproject.toml  pytest.ini  s3_checksums_and_conditionals.md  s3_lib.py  setup.py  setup.py.legacy  split_file.py  test.py  tox.ini
s3lib/: __init__.py  pool.py  s3_lib.py  sigv4.py  test__init__.py  test_utils.py  ui.py  utils.py
s3lib/test/: test.py
tests/: test__init__.py  test_checksums.py  test_connection_reuse.py  test_pool.py  test_pool_integration.py  test_sigv4.py  test_simple_hang.py  test_ui.py  test_utils.py
tests/fixtures/: s3sign_policy.json
